store application.properties file in typical os config dir